--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,12 +37,13 @@ jobs:
           
       - name: Copy app files
         run: |
-          cp -r bin default package/
+          cp -r . package/
+          rm -rf package/.github package/.git
           
       - name: Create tarball package
         run: |
           cd package
-          tar -czf ta_http_action-${{ steps.version.outputs.version }}.tar.gz * --exclude='.git' --exclude='.github'
+          tar -czf ta_http_action-${{ steps.version.outputs.version }}.tar.gz --owner=splunk --group=splunk .
           ls -la
 
       - name: Generate release notes
